bizinikiwi/pezframe/support/test/tests/construct_runtime_ui/duplicate_exclude.stderr
error: `Call` was already declared before. Please remove the duplicate declaration
  --> tests/construct_runtime_ui/duplicate_exclude.rs:26:49
   |
26 |         System: pezframe_system exclude_parts { Call, Call },
   |                                                       ^^^^
